import grpc
from concurrent import futures
import db_control_pb2
import db_control_pb2_grpc

class DBControlService(db_control_pb2_grpc.DBControlServiceServicer):
    def GetStatus(self, request, context):
        # Simulate getting current instance count
        return db_control_pb2.DBStatus(state="Running", current_instances=3)

    def ScaleInstance(self, request, context):
        # Simulate scaling logic
        return db_control_pb2.ScaleResponse(success=True, message=f"Scaled {request.engine} at {request.location} to {request.target_instances} instances.")

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    db_control_pb2_grpc.add_DBControlServiceServicer_to_server(DBControlService(), server)
    server.add_insecure_port('[::]:50051')
    server.start()
    server.wait_for_termination()
